Tue Apr 11 21:41:20 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* bin/auto_compile_win32.pl: Updated the lists of
	  workspaces/projects to build.

Tue Apr 11 16:15:31 2000  David L. Levine  <levine@cs.wustl.edu>

        * ace/OS.cpp: moved ACE_Thread_Exit::is_constructed_
          definition so that it's seen on all platforms, not just
          those that are ACE_MT_SAFE.  Fixes:
          Mon Apr 10 07:30:22 2000  John Rodgers <jrrodgers@acm.org>
          Thanks to Vishal for reporting it.

Tue Apr 11 13:57:11 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * ace/Synch_T.cpp: Make sure to cast the "type" argument to
          "short" to avoid overload confusions by certain compilers.
  	  Thanks to Charles Taurines <ctaurines@amadeus.net> for reporting
 	  this.

Tue Apr 11 12:52:04 2000  Vishal Kachroo  <vishal@cs.wustl.edu>

        * ace/SOCK_Dgram_Mcast.cpp (subscribe): Removed the #ifdef
          for template instantiation.

Tue Apr 11 11:32:03 2000  Chad Elliott  <elliott_c@ociweb.com>
        * bin/ACEutils.pm

          Refactored duplicate test code into ACEutils.pm

Mon Apr 10 19:45:32 2000  Vishal Kachroo  <vishal@cs.wustl.edu>

        * ace/SOCK_Dgram_Mcast.cpp (subscribe): Added a #ifdef to
          get past a g++ error. I am looking into the right way to
          do this.

Mon Apr 10 17:37:53 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/config-freebsd-pthread.h: Addplied John Aughey
          <ajh4@cec.wustl.edu>'s patch for FreeBSD 4.0.

Mon Apr 10 07:30:22 2000  John Rodgers <jrrodgers@acm.org>

        * ace/OS.{h,cpp},Thread_Manager.cpp (instance,~ACE_Thread_Exit):
          added a state variable, is_constructed_, to ACE_Thread_Exit.
          instance () sets it, ~ACE_Thread_Exit () clears it.  This
          allows ACE::init () to be called after ACE::fini (), because
          a new ACE_Thread_Exit instance will be created. [Bug 526]

Sun Apr  9 14:16:23 2000  James CE Johnson  <jcej@mobsec.com>
